--- a/src/app/components/upload-list/upload-list.component.html
+++ b/src/app/components/upload-list/upload-list.component.html
@@ -1,5 +1,7 @@
 <div class="card">
   <div class="card-header">List of Files</div>
+  <!-- show image of user email -->
+  <img src="{{userImg}}"/>
   <ul class="list-group list-group-flush">
     <li class="list-group-item"
         *ngFor="let file of fileUploads">
